🚀 Complete Token-2022 AMM with Transfer Hook Support
✨ Features Added:
- Full Token-2022 AMM with transfer hook integration
- Swap function with proper hook account handling
- Permissionless pool creation
- Integer overflow protection in swap calculations
- Updated program IDs in README

🔧 Technical Updates:
- Added invoke_transfer_checked for hook compatibility
- Fixed pool PDA derivation consistency
- Enhanced pool existence validation
- Improved error handling with u128 arithmetic

🛡️ Security:
- Added comprehensive .gitignore
- Protected private keypairs from version control

Program IDs:
- AMM: 6vL4UPFu43VpdcD8jBs8F4AvtaMtDxkEWMNpZJZtueYM
- Hook: o1ZEvtrSXokknjnyaMkp7xyXfMJr4znptdpba7XKoiT

--- a/token-2022-amm/Anchor.toml
+++ b/token-2022-amm/Anchor.toml
@@ -1,21 +1,22 @@
 [toolchain]
 package_manager = "yarn"
+anchor_version = "0.30.1"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-token_2022_amm = "BUSnE2ekGTqthHsRd2X1HdkWKa4o4AkzjwhD2yDToUXs"
-token_hook = "GfXgLTyDbBP3LJL5XZtnBPgQm1NuQ7xNCf4wNLYHSt1U"
+token_2022_amm = "6vL4UPFu43VpdcD8jBs8F4AvtaMtDxkEWMNpZJZtueYM"
+token_hook = "o1ZEvtrSXokknjnyaMkp7xyXfMJr4znptdpba7XKoiT"
 
 [programs.devnet]
-token_2022_amm = "BUSnE2ekGTqthHsRd2X1HdkWKa4o4AkzjwhD2yDToUXs"
-token_hook = "GfXgLTyDbBP3LJL5XZtnBPgQm1NuQ7xNCf4wNLYHSt1U"
+token_2022_amm = "6vL4UPFu43VpdcD8jBs8F4AvtaMtDxkEWMNpZJZtueYM"
+token_hook = "o1ZEvtrSXokknjnyaMkp7xyXfMJr4znptdpba7XKoiT"
 
 [programs.mainnet]
-token_2022_amm = "BUSnE2ekGTqthHsRd2X1HdkWKa4o4AkzjwhD2yDToUXs"
-token_hook = "GfXgLTyDbBP3LJL5XZtnBPgQm1NuQ7xNCf4wNLYHSt1U"
+token_2022_amm = "6vL4UPFu43VpdcD8jBs8F4AvtaMtDxkEWMNpZJZtueYM"
+token_hook = "o1ZEvtrSXokknjnyaMkp7xyXfMJr4znptdpba7XKoiT"
 
 [registry]
 url = "https://api.apr.dev"
