--- a/token-2022-amm/programs/token-2022-amm/Cargo.toml
+++ b/token-2022-amm/programs/token-2022-amm/Cargo.toml
@@ -17,9 +17,9 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.31.1"
-anchor-spl = "0.31.1"
-spl-token-2022 = "4.0.0"
-spl-transfer-hook-interface = "0.7.0"
-spl-tlv-account-resolution = "0.7.0"
+anchor-lang = "0.30.1"
+anchor-spl = "0.30.1"
+spl-token-2022 = { version = "3.0.0", features = ["no-entrypoint"] }
+spl-transfer-hook-interface = "0.6.3"
+spl-tlv-account-resolution = "0.6.3"
 
